--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 404 
+  status = 404
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
